# SSVEP-1

./: CMakeLists.txt  README.md  kinova_robot.launch  package.xml  simulator.launch
action/: MoveRobot.action
config/: config.yaml
kinova-ros-noetic-devel/kinova_bringup/launch/config/: robot_parameters.yaml
kinova-ros-noetic-devel/kinova_description/urdf/: j2s7s300.xacro  test.xacro
launch/: launcher.launch
plotjuggler/: plotLayout.xml
robotics_function/include/robotics_function/: main_robotics_function.h
robotics_function/src/: main_robotics_function.cpp
src/: controller.cpp  interface.cpp  joint_init_set.cpp  planner.cpp  robot.cpp
ssvep1/: CMakeLists.txt  package.xml
ssvep1/config/: config.yaml
ssvep1/launch/: bringup.launch  launcher.launch
ssvep1/rviz/: rvizConfig.rviz
ssvep1/src/: controller.cpp  initial_setup_server.cpp  planner.cpp  robot.cpp
thesis_msgs/: CMakeLists.txt
